--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+              <p class="lead">My name is Tucker Langseth and I design, implement and program video games. I have worked on 3 of my own projects since starting game development. So far, I am self-taught through tutorials and books. My strengths are game design, programming, and networking. Able to proficiently code in C languages, Java, and Python but am willing to learn any language.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">Looking for full-time or part-time programming needs to help in solving solutions. Able to program, design, problem solve, debug, and create efficiency wherever it is needed. Please feel free to contact me for more information.</p>
           </div>
         </div>
         <div class="text-center mt-4">
@@ -216,7 +216,7 @@
             <h4 class="text-uppercase mb-4">My Links</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/ashyggdrasilgames/">
                   <i class="fa fa-fw fa-facebook"></i>
                 </a>
               </li>
@@ -226,12 +226,12 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://twitter.com/YggdrasilAsh">
                   <i class="fa fa-fw fa-twitter"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/tucker-langseth-68877980/">
                   <i class="fa fa-fw fa-linkedin"></i>
                 </a>
               </li>
@@ -253,7 +253,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; The Ash Yggdrasil 2018</small>
       </div>
     </div>
 
