--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           </div>
         </div>
         <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/drive/u/0/folders/19lJqJ9r7X6gvwFI-0_vKxF0zFDP2GNb2">
+          <a class="btn btn-xl btn-outline-light" href="TuckerResume.pdf">
             <i class="fa fa-download mr-2"></i>
-            Download Now!
+            Download Resume!
           </a>
         </div>
       </div>
