--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="TuckerResume.pdf">
+          <a class="btn btn-xl btn-outline-light" href="TuckerResume.pdf" target="_blank">
             <i class="fa fa-download mr-2"></i>
             Download Resume!
           </a>
