--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
               <p class="lead">My name is Tucker Langseth and I design, implement and program video games. I have worked on 3 of my own projects since starting game development. So far, I am self-taught through tutorials and books. My strengths are game design, programming, and networking. Able to proficiently code in C languages, Java, and Python but am willing to learn any language.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Looking for full-time or part-time programming needs to help in solving solutions. Able to program, design, problem solve, debug, and create efficiency wherever it is needed. Please feel free to contact me for more information.</p>
+            <p class="lead">Looking for full-time or part-time programming needs to help in Game Development. Able to program, design, problem solve, debug, analyze data and create efficiency wherever it is needed. Please feel free to contact me for more information.</p>
           </div>
         </div>
         <div class="text-center mt-4">
           <a class="btn btn-xl btn-outline-light" href="TuckerResume.pdf" target="_blank">
             <i class="fa fa-download mr-2"></i>
-            Download Resume!
+            Download My Resume!
           </a>
         </div>
       </div>
@@ -163,41 +163,37 @@
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-              </div>
-            </form>
+              <form method="POST" action="https://formspree.io/tuckermmlangseth@gmail.com">
+                  <div class="control-group">
+                      <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                          <label>Name</label>
+                          <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
+                          <p class="help-block text-danger"></p>
+                      </div>
+                  </div>
+                  <div class="control-group">
+                      <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                          <label>Email Address</label>
+                          <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
+                          <p class="help-block text-danger"></p>
+                      </div>
+                  </div>
+                  <div class="control-group">
+                      <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                          <label>Phone Number</label>
+                          <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
+                          <p class="help-block text-danger"></p>
+                      </div>
+                  </div>
+                  <div class="control-group">
+                      <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                          <label>Message</label>
+                          <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                          <p class="help-block text-danger"></p>
+                      </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary btn-xl" >Send</button>
+              </form>
           </div>
         </div>
       </div>
