--- a/index.html
+++ b/index.html
@@ -167,28 +167,28 @@
                   <div class="control-group">
                       <div class="form-group floating-label-form-group controls mb-0 pb-2">
                           <label>Name</label>
-                          <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
+                          <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." name="Name">
                           <p class="help-block text-danger"></p>
                       </div>
                   </div>
                   <div class="control-group">
                       <div class="form-group floating-label-form-group controls mb-0 pb-2">
                           <label>Email Address</label>
-                          <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
+                          <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." name="Email Address">
                           <p class="help-block text-danger"></p>
                       </div>
                   </div>
                   <div class="control-group">
                       <div class="form-group floating-label-form-group controls mb-0 pb-2">
                           <label>Phone Number</label>
-                          <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
+                          <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." name="Phone Number">
                           <p class="help-block text-danger"></p>
                       </div>
                   </div>
                   <div class="control-group">
                       <div class="form-group floating-label-form-group controls mb-0 pb-2">
                           <label>Message</label>
-                          <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                          <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message." name="Message Area"></textarea>
                           <p class="help-block text-danger"></p>
                       </div>
                   </div>
