--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Ash Yggdrasil</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Tucker Langseth</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -56,7 +56,7 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/portfolio/profile.jpg" alt="">
-        <h1 class="text-uppercase mb-0">Ash Yggdrasil</h1>
+        <h1 class="text-uppercase mb-0">Tucker Langseth</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Game Developer -- Programmer</h2>
       </div>
@@ -215,12 +215,6 @@
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/ashyggdrasilgames/">
                   <i class="fa fa-fw fa-facebook"></i>
                 </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-google-plus"></i>
-                </a>
-              </li>
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://twitter.com/YggdrasilAsh">
                   <i class="fa fa-fw fa-twitter"></i>
@@ -230,16 +224,10 @@
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/tucker-langseth-68877980/">
                   <i class="fa fa-fw fa-linkedin"></i>
                 </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-dribbble"></i>
-                </a>
-              </li>
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
+            <h4 class="text-uppercase mb-4">Freelancer Template was used to create this website</h4>
             <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
               <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
           </div>
