--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                           <h2 class="text-secondary text-uppercase mb-0">Battle of Midgard(in progress)</h2>
                           <hr class="star-dark mb-5">
                           <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
-                          <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                          <p class="mb-5">Mobile game for Android phones created using Unity.</p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
                               Close Project
@@ -321,7 +321,7 @@
                           <h2 class="text-secondary text-uppercase mb-0">Meme Scaper(in progress)</h2>
                           <hr class="star-dark mb-5">
                           <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-                          <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                          <p class="mb-5">Android app created in the ADK enviroment. Creates meme based on three options: a previously saved imaged, a web image, or a fake text image.</p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
                               Close Project
