--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/DasSoldatenLogo.png" alt="">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
@@ -85,7 +85,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/TemptationsTableLogo.png" alt="">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
@@ -95,7 +95,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/BoM.png" alt="">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
@@ -105,7 +105,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/game.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/MemeScaperLogo.png" alt="">
                       </a>
                   </div>
               </div>
@@ -119,16 +119,16 @@
               <hr class="star-light mb-5">
               <div class="row">
                   <div class="col-lg-4 ml-auto">
-                      <p class="lead">My name is Tucker Langseth and I design, implement and program video games. I have worked on 3 of my own projects since starting game development. So far, I am self-taught through tutorials and books. My strengths are game design, programming, and networking. Able to proficiently code in C languages, Java, and Python but am willing to learn any language.</p>
+                      <p class="lead">My name is Tucker Langseth and I design and program video games. Degree in Chemical Engineering from PSU. I have worked on 3 of my own projects since starting game development. Mainly taught through self-discipline but learned algorithmic analysis of integration in college. My strengths are gameplay programming, story design, complex problem solving, and working with a team. Able to proficiently code in C languages, Java, and Python but am willing to learn any language.</p>
                   </div>
                   <div class="col-lg-4 mr-auto">
-                      <p class="lead">Looking for full-time or part-time programming needs to help in Game Development. Able to program, design, problem solve, debug, analyze data and create efficiency wherever it is needed. Please feel free to contact me for more information.</p>
+                      <p class="lead">Looking for full-time or part-time jobs in Game Development. Able to program, design, problem solve, debug, analyze data and create efficiency wherever it is needed. Please feel free to contact me for more information.</p>
                   </div>
               </div>
               <div class="text-center mt-4">
                   <a class="btn btn-xl btn-outline-light" href="TuckerResume.pdf" target="_blank">
                       <i class="fa fa-download mr-2"></i>
-                      Download My Resume!
+                      Download Resume
                   </a>
               </div>
           </div>
@@ -186,7 +186,6 @@
                   <div class="col-md-4 mb-5 mb-lg-0">
                       <h4 class="text-uppercase mb-4">Location</h4>
                       <p class="lead mb-0">
-                          86 Colonial Crest Dr
                           <br>Lancaster, PA 17601
                       </p>
                   </div>
@@ -248,6 +247,7 @@
                           <p class="mb-5">
                               Platforming side-scrolling adventure game featuring a final boss fight. Consists of 10 levels with increasingly more difficult platforming challenges, and 5 different types of enemies. Keeps track of historical scores and runtimes in a leaderboard in the main menu.
                               <br /> <a href="https://theashyggdrasil.itch.io/das-soldaten" target="_blank">Das Soldaten on Itch.io</a>
+                              <img class="img-fluid mb-5" src="img/portfolio/DasSoldatenCode.png" alt="">
                           </p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
@@ -297,7 +297,7 @@
                       <div class="col-lg-8 mx-auto">
                           <h2 class="text-secondary text-uppercase mb-0">Battle of Midgard(in progress)</h2>
                           <hr class="star-dark mb-5">
-                          <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
+                          <img class="img-fluid mb-5" src="img/portfolio/BoM.png" alt="">
                           <p class="mb-5">Mobile game for Android phones created using Unity.</p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
@@ -320,7 +320,7 @@
                       <div class="col-lg-8 mx-auto">
                           <h2 class="text-secondary text-uppercase mb-0">Meme Scaper(in progress)</h2>
                           <hr class="star-dark mb-5">
-                          <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
+                          <img class="img-fluid mb-5" src="img/portfolio/MemeScaperLogo.png" alt="">
                           <p class="mb-5">Android app created in the ADK enviroment. Creates meme based on three options: a previously saved imaged, a web image, or a fake text image.</p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
