--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/BoM.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/DasSoldatenLogo.png" alt="">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
