--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/TemptationsTableLogo.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/TemptationsTableLogo.PNG" alt="">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
@@ -247,7 +247,7 @@
                           <p class="mb-5">
                               Platforming side-scrolling adventure game featuring a final boss fight. Consists of 10 levels with increasingly more difficult platforming challenges, and 5 different types of enemies. Keeps track of historical scores and runtimes in a leaderboard in the main menu.
                               <br /> <a href="https://theashyggdrasil.itch.io/das-soldaten" target="_blank">Das Soldaten on Itch.io</a>
-                              <img class="img-fluid mb-5" src="img/portfolio/DasSoldatenCode.png" alt="">
+                              <img class="img-fluid mb-5" src="img/portfolio/dsc.PNG" alt="">
                           </p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
