--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/dsl.PNG" alt="">
+                          <img class="img-fluid" src="img/portfolio/dsl.PNG" alt="" style="width:350px;height:250px;">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
@@ -85,7 +85,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/TemptationsTableLogo.PNG" alt="">
+                          <img class="img-fluid" src="img/portfolio/TemptationsTableLogo.PNG" alt="" style="width:350px;height:250px;">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
@@ -95,7 +95,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/BoM.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/BoM.png" alt="" style="width:350px;height:250px;">
                       </a>
                   </div>
                   <div class="col-md-6 col-lg-4">
@@ -105,7 +105,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img class="img-fluid" src="img/portfolio/MemeScaperLogo.png" alt="">
+                          <img class="img-fluid" src="img/portfolio/MemeScaperLogo.png" alt="" style="width:200px;height:200px;">
                       </a>
                   </div>
               </div>
@@ -272,7 +272,7 @@
                           <hr class="star-dark mb-5">
                           <img class="img-fluid mb-5" src="img/portfolio/TemptationsTablePreview.jpg" alt="">
                           <p class="mb-5">
-                              Game created for the "Movie Game Jam" hosted on Itch.io. Adventure puzzle game insipired by the movie "Pans Labyrinth" created over a 2 week process from design to completion.
+                              Game created for the "Movie Game Jam" hosted on Itch.io. Adventure puzzle game insipired by the movie "Pans Labyrinth" created over a 2 week process from design to completion. This was a solo project.
                               <a href="https://theashyggdrasil.itch.io/temptations-table" target="_blank">Temptation's Table on Itch.io</a>
                           </p>
 
@@ -298,7 +298,7 @@
                           <h2 class="text-secondary text-uppercase mb-0">Battle of Midgard(in progress)</h2>
                           <hr class="star-dark mb-5">
                           <img class="img-fluid mb-5" src="img/portfolio/BoM.png" alt="">
-                          <p class="mb-5">Mobile game for Android phones created using Unity.</p>
+                          <p class="mb-5">Mobile game for Android phones created using Unity. Currently working on the Game Design Document</p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
                               Close Project
@@ -321,7 +321,7 @@
                           <h2 class="text-secondary text-uppercase mb-0">Meme Scaper(in progress)</h2>
                           <hr class="star-dark mb-5">
                           <img class="img-fluid mb-5" src="img/portfolio/MemeScaperLogo.png" alt="">
-                          <p class="mb-5">Android app created in the ADK enviroment. Creates meme based on three options: a previously saved imaged, a web image, or a fake text image.</p>
+                          <p class="mb-5">Android app created in the ADK enviroment. Creates meme based on the following options: a previously saved imaged, take a picture, a web image, or a fake text image.</p>
                           <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                               <i class="fa fa-close"></i>
                               Close Project
