--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                       <p class="lead">My name is Tucker Langseth and I design and program video games. Degree in Chemical Engineering from PSU. I have worked on 3 of my own projects since starting game development. Mainly taught through self-discipline but learned algorithmic analysis of integration in college. My strengths are gameplay programming, story design, complex problem solving, and working with a team. Able to proficiently code in C languages, Java, and Python but am willing to learn any language.</p>
                   </div>
                   <div class="col-lg-4 mr-auto">
-                      <p class="lead">Looking for full-time or part-time jobs in Game Development. Able to program, design, problem solve, debug, analyze data and create efficiency wherever it is needed. Please feel free to contact me for more information.</p>
+                      <p class="lead">Looking for full-time or part-time jobs in Game Development and Software Development. Able to program, design, problem solve, debug, analyze data and create efficiency wherever it is needed. Please feel free to contact me for more information.</p>
                   </div>
               </div>
               <div class="text-center mt-4">
